Added rpmdisturl. Fixed "g ds" so it ignores whitespace.

--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -13,7 +13,7 @@
 	b = branch --color
 	d = diff
 	dw = diff -w
-	ds = diff --staged
+	ds = diff --staged -w
 	co = checkout
 	ci = commit
 	cia = commit --amend
