--- a/home/.gitconfig
+++ b/home/.gitconfig
@@ -6,13 +6,13 @@
 	default = simple
 [alias]
 	s = status
+    sh = show
 	l = log --graph --decorate
 	b = branch --color
-	d = diff
-	dw = diff -w
+	d = diff -w
 	ds = diff --staged -w
 	co = checkout
-	ci = commit
+	ci = commit -v
 	cia = commit --amend
 	p = pull --prune
 	pu = push
